--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Quiz View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -39,8 +44,8 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi">
-                                <rect key="frame" x="26" y="28" width="321" height="100"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ll-47-QUi">
+                                <rect key="frame" x="26" y="39" width="50.5" height="122"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="122" id="y9i-Tj-DHG" userLabel="height ="/>
                                 </constraints>
@@ -48,22 +53,54 @@
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MsDaley2" translatesAutoresizingMaskIntoConstraints="NO" id="8wF-to-g5i">
+                                <rect key="frame" x="37.5" y="180.5" width="300" height="306"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8wF-to-g5i" secondAttribute="height" multiplier="47:48" id="hee-r5-Hmj"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kR3-Xf-vgH">
+                                <rect key="frame" x="62.5" y="536.5" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="5O8-ah-JPe"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5m-rg-gde">
+                                <rect key="frame" x="163" y="586.5" width="49" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7Np-7D-btF"/>
+                                </constraints>
+                                <state key="normal" title="Submit"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.75" id="0rI-Cz-kPA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1lj-O8-iED"/>
+                            <constraint firstItem="kR3-Xf-vgH" firstAttribute="top" secondItem="8wF-to-g5i" secondAttribute="bottom" constant="50" id="37P-rJ-edA"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="4OX-P3-WNf"/>
+                            <constraint firstItem="8wF-to-g5i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gt-aB-0J7"/>
+                            <constraint firstItem="8wF-to-g5i" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="8v5-Fh-5wO"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="BhB-nM-KZn"/>
+                            <constraint firstItem="d5m-rg-gde" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PZ8-7b-bX0"/>
+                            <constraint firstItem="8wF-to-g5i" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="QzG-Q3-ZMh"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="-25" id="Tti-P2-wTb"/>
+                            <constraint firstItem="d5m-rg-gde" firstAttribute="top" secondItem="kR3-Xf-vgH" secondAttribute="top" constant="50" id="cbH-f9-ola"/>
                             <constraint firstItem="dDo-ad-t0B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kia-Au-D9P"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.3" id="ufS-38-bCP"/>
+                            <constraint firstItem="kR3-Xf-vgH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xNf-iP-cvG"/>
                             <constraint firstItem="1ll-47-QUi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="zPR-FC-3zR"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="answerTableView" destination="dDo-ad-t0B" id="z08-T8-5QU"/>
+                        <outlet property="enterNameField" destination="kR3-Xf-vgH" id="IZU-wy-OAV"/>
+                        <outlet property="msDaley" destination="8wF-to-g5i" id="Ii5-s6-VHq"/>
                         <outlet property="questionLabel" destination="1ll-47-QUi" id="Smc-9Y-pfO"/>
+                        <outlet property="submitButton" destination="d5m-rg-gde" id="2rU-ZT-By3"/>
                         <outlet property="tableView" destination="dDo-ad-t0B" id="2AH-Sc-92C"/>
                     </connections>
                 </viewController>
@@ -233,6 +270,9 @@
             <point key="canvasLocation" x="-631.20000000000005" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MsDaley2" width="517" height="528"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="5jt-q9-v0U"/>
     </inferredMetricsTieBreakers>
